@@ -50,6 +50,13 @@ class EVF_Settings_General extends EVF_Settings_Page {
 					'type'    => 'checkbox',
 				),
 				array(
+					'title'   => esc_html__( 'Enable Log', 'everest-forms' ),
+					'desc'    => esc_html__( 'Enable storing the logs.', 'everest-forms' ),
+					'id'      => 'everest_forms_enable_log',
+					'default' => 'no',
+					'type'    => 'checkbox',
+				),
+				array(
 					'type' => 'sectionend',
 					'id'   => 'general_options',
 				),
